cluster/apps/default/photoview/photoview-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoview
  namespace: photoview
spec:
  selector:
    matchLabels:
      app: photoview
  template:
    metadata:
      labels:
        app: photoview
    spec:
      containers:
        - name: photoview
          image: viktorstrate/photoview:2
          ports:
            - name: photoview
              containerPort: 80
          volumeMounts:
            - name: photos
              mountPath: /photos
            - name: photoview-cache
              mountPath: /app/cache
      volumes:
        - name: photos
          nfs:
            path: /volume1/Users/mmckessock/Pictures
            server: granite.${DOMAIN}
        - name: photoview-cache
          persistentVolumeClaim:
            claimName: cache
