cluster/apps/default/photoview/mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: photoview
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
