cluster/apps/default/photoview/photoview-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photoview
  namespace: photoview
spec:
  selector:
    app: photoview
  ports:
    - port: 80
